src/assets/scss/_jumbotron-themes.scss
.counter-widget-jumbotron--statue-of-liberty {
  .counter-widget-jumbotron__img {
    max-width: initial !important;
    width: 115% !important;
  }
}

.mlk-banner {
  .counter-widget-jumbotron__widget {
    margin-top: 18%;
  }
}

.counter-widget-edit--medium {
	.counter-widget-jumbotron--no-img {
		padding: .625em;

		.counter-widget-jumbotron__logo-container {
			max-width: 150px !important;
		}

		.counter-widget-jumbotron__widget {
			margin-top: 0 !important;
		}

		.counter-widget__title {
			max-width: 65% !important;
			text-shadow: none !important;
			margin-bottom: .75rem !important;
		}

		.counter-widget {
			padding-top: .625rem !important;

			&__counters {
				flex-basis: 75% !important;
				max-width: 75% !important; 
				font-size: .75rem !important;
			}

			&__counter {
				max-width: 300px !important;
				margin-left: auto !important;
				margin-right: auto !important;
				text-shadow: none !important;
				margin-bottom: .75rem !important;
			}

			&__title {
				font-size: 1rem !important;
			}

			&__additional-details {
				font-size: .625em;
				max-width: 100% !important;

				p {
					font-size: 11px !important;
					text-shadow: none !important;
				}
			}

			&__message-container {
				font-size: .625rem;
				max-width: 100% !important;

				p {
					font-size: 11px !important;
					margin-bottom: .625em !important;
				}
			}
		}
	}

	.counter-widget-jumbotron {
		&__widget {
			left: 0 !important;
			margin-top: 14% !important;
		}

		&--statue-of-liberty {
			.counter-widget-jumbotron {
				&__img {
					width: 120% !important;
				}
			}
		}
	}

	.counter-widget {
		transform: scale(1) !important;
		width: 100% !important;
		max-width: 100% !important;
		padding-left: 1.25rem !important;
		padding-right: 1.25rem !important;

		&-jumbotron__logo-container {
			max-width: 180px !important;
		}

		&__title {
			max-width: 60% !important;
			font-size: 14px !important;
			margin-bottom: 5px !important;
			text-shadow: 0 4px 10px rgba(0,0,0,.6);
		}
 
		&__counters,
		&__details {
			margin-bottom: 0 !important;
			padding-left: 4px !important;
		}

		&__counter {
			font-size: 12px !important;
			max-width: 160px !important;
			text-shadow: 0 4px 4px rgba(0,0,0,.6);
		}

		&__counter:not(:last-child) {
			margin-bottom: .5em !important;
		}

		&__date-wrap {
			margin-bottom: 4px !important;
			max-width: 100% !important;
		}

		&__additional-details {
			padding-left: 6px !important;
		}

		&__nonprofit-details {
			p {
				margin-bottom: 4px;
				font-size: 12px;
				text-shadow: 0 4px 4px rgba(0,0,0,.6);
			}
		}

		&__button-container {
			text-align: center !important;
			margin-top: 6px !important;
		}

		&__button {
			font-size: 10px !important;
			padding: 3px 12px !important;
		}
	}
}

